<resources>
    <string name="app_name">Mencak</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="title_signup_page">Complete your data below, OK?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="link_signup"><u>Sign Up</u></string>
    <string name="message_login">Already have an account?</string>
    <string name="link_login"><u>Login</u></string>
    <string name="message_login_page">Enter your data first</string>
    <string name="title_login_page">Are you ready to upgrade your skills?</string>
    <string name="name">Full Name</string>
    <string name="message_main_page">Happy Learning in Dicoding.</string>
    <string name="copyright">© 2021 Dicoding</string>
    <string name="logout">Logout</string>
    <string name="list_story_name">Name</string>
    <string name="story_description">Description</string>
    <string name="create_story">Create Story</string>
    <string name="maps">Maps</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="message_signup">Dont have an account?</string>
    <string name="error_email">Wrong email format</string>
    <string name="error_password">Password at least 6 character long</string>
    <string name="error_camera_take">Failed to take picture.</string>
    <string name="error_camera_add">Failed showing camera</string>
    <string name="error_retrofit">Failed instance retrofit</string>
    <string name="error_maps">Failed showing maps</string>
    <string name="add_picture">Please add picture first.</string>
    <string name="add_name">Add name</string>
    <string name="add_email">Add email</string>
    <string name="add_password">Add password</string>
    <string name="signup_success">The account is ready. Come on, login and learn coding.</string>
    <string name="signup_failed">"The account is failed. Please put correct registration or email already registered."</string>
    <string name="email_success">You have successfully logged in. Can\'t wait to learn huh?</string>
    <string name="email_failed">You failed to login. Make sure the Email and Password are correct.</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="title_activity_maps">Submission 2 Intermediate</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="retry">Retry</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_scan">Scan</string>
    <string name="title_food">Food</string>
    <string name="title_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan_your_food">Scan your food</string>
    <string name="food_your_location">Food on your location</string>
    <string name="see_all">See all</string>
    <string name="populer_tag">Populer Tag</string>
    <string name="about_us">About Us</string>
    <string name="md">MD Path</string>
    <string name="ml">ML Path</string>
    <string name="cc">CC Path</string>
    <string name="md_1">Mufti Restu M \nUNIB</string>
    <string name="md_2">Adde Nanda C.P \nUNIB</string>
    <string name="ml_1">M Daffa A \nUNIB</string>
    <string name="ml_2">Maria Misela A.W \nUNINDRA</string>
    <string name="cc_1">Khoirus Fauzi R \nITS</string>
    <string name="cc_2">M Aditya M \nUNSYIAH</string>
    <string-array name="data_food_name">
        <item>Ayam Betutu</item>
        <item>Gado-gado Betawi</item>
        <item>Kue Cucur</item>
        <item>Kue Serabi</item>
        <item>Lumpia</item>
        <item>Pecel Lele</item>
        <item>Rawon</item>
        <item>Roti Ganjel Rel</item>
        <item>Sambal Matah</item>
        <item>Sate Lilit</item>
        <item>Sate Madura</item>
        <item>Seblak</item>
        <item>Semur Jengkol</item>
        <item>Tahu Petis</item>
        <item>Wingko Babat</item>
    </string-array>
    <string-array name="data_food_price">
        <item>Rp85,000</item>
        <item>Rp20,000</item>
        <item>Rp10,000</item>
        <item>Rp10,000</item>
        <item>Rp25,000</item>
        <item>Rp10,000</item>
        <item>Rp25,000</item>
        <item>Rp10,000</item>
        <item>Rp40,000</item>
        <item>Rp20,000</item>
        <item>Rp10,000</item>
        <item>Rp10,000</item>
        <item>Rp15,000</item>
        <item>Rp5,000</item>
        <item>Rp20,000</item>
    </string-array>
    <string-array name="data_food_description">
        <item>Betutu adalah lauk yang terbuat dari ayam atau bebek yang utuh yang berisi bumbu, kemudian dipanggang dalam api sekam. Betutu ini telah dikenal di seluruh kabupaten di Bali. Betutu merupakan jenis makanan tradisional daerah Bali yang bahan mentahnya berupa karkas utuh itik dan ayam. Kata betutu berasal dari kata tunu yang berarti bakar dan dirangkai dengan kata be yang berarti daging</item>
        <item>Gado-gado Betawi merupakan masakan hasil campuran dari sayur-sayuran yang direbus dan dicampur dengan potongan mentimun dengan irisan tipis, potongan tahu tempe goreng berbentuk dadu kecil, ditambah labu siam, nangka muda, kangkung, dan tauge. Selain itu makanan yang disukai oleh semua kalangan ini dicampur dengan bumbu atau saus kacang tanah yang ditumbuk halus bersama cabe rawit (jumlah sesuai selera) lalu masukan garam, gula, disertai irisan telur, kentang rebus dan di atasnya ditaburkan bawang goreng dan sedikit emping goreng juga kerupuk dan terakhir tambahan sedikit perasan jeruk nipis</item>
        <item>Kue Cucur atau Cucur adalah jajanan khas suku Betawi. Kue ini terbuat dari tepung beras dan gula jawa atau gula aren yang digoreng. Kue Cucur memiliki bentuk yang cenderung tebal menggembung seperti gunung di bagian tengah dan tipis di bagian pinggirannya</item>
        <item>Serabi adalah kue tradisional yang memakai bahan baku yakni tepung beras dan santan. Serabi biasanya dijajakan di pagi hari dan dimasak menggunakan tungku sehingga menghasilkan rasa yang khas. Kadang-kadang telur ayam yang telah dikocok ditambahkan ke atas adonan serabi yang sedang dimasak</item>
        <item>Lumpia merupakan jajanan tradisional khas Tionghoa dan merupakan kuliner khas dari Semarang. Selain rasanya yang enak dan murah, lumpia juga memiliki isian yang sehat, biasanya terdiri dari sayuran segar, rebung, telur, daging, maupun makanan laut</item>
        <item>Pecel lele atau pecek lele di Indonesia adalah nama sebuah makanan khas Jawa yang terdiri dari ikan lele dan sambal tomat. Biasanya yang dimaksud adalah ikan lele yang digoreng kering dengan minyak lalu disajikan dengan sambal tomat dan lalapan. Lalapan biasa terdiri dari kemangi, kubis, mentimun, dan kacang panjang.</item>
        <item>Rawon adalah masakan Indonesia berupa sup daging berkuah hitam dengan campuran bumbu khas yang menggunakan kluwek. Rawon, meskipun dikenal sebagai masakan khas Jawa Timur, dikenal pula oleh masyarakat Jawa Tengah sebelah timur</item>
        <item>Roti ganjel rel atau roti gambang adalah roti khas Semarang. Meskipun termasuk makanan khas Betawi, roti ini jarang ditemui dan harus blusukan ke pasar tradisional, seperti Pasar Johar. Dengan terbakarnya Pasar Johar, roti ini semakin jarang ditemui Roti ini berbentuk kotak dan berwarna cokelat bertabur wijen, roti ini bercita rasa kayu manis. Teksturnya ulet dan padat dipadu dengan aroma cokelat serta kayu manis yang nendang di lidah. Karena teksturnya yang ulet, memakannya dua potong saja sudah cukup mengenyangkan perut.</item>
        <item>Sambal matah adalah sambal tradisional Bali yang dapat ditemukan di seluruh daerah di Provinsi Bali. matah memiliki arti mentah. Sambal matah merupakan sambal yang berbahan mentah tanpa digerus (diulek). Bahan-bahan sambal matah yaitu: bawang merah, cabai merah, terasi, garam, sereh, jeruk lemo dan minyak kelapa</item>
        <item>Sate Lilit adalah sebuah varian sate asal Bali. Sate ini terbuat dari daging babi, ikan, ayam, daging sapi, atau bahkan kura-kura yang dicincang, kemudian dicampur dengan parutan kelapa, santan, jeruk nipis, bawang merah, dan merica. Daging cincang yang telah berbumbu dilekatkan pada sebuah bambu atau tebu, kemudian dipanggang di atas arang.</item>
        <item>Sate Madura adalah sate yang memiliki bumbu khas Madura. Sate Madura biasanya terbuat dari ayam. Madura selain terkenal sebagai pulau garam, juga terkenal dengan satenya. Bumbunya adalah campuran kacang yang ditumbuk halus petis dan sedikit bawang merah. Bumbu kecap juga menjadi salah satu khas dari Pamekasan yang cukup nikmat untuk disantap. Memanggangnya dengan api dari batok kelapa yang dihanguskan terlebih dahulu yang disebut dengan arang batok kelapa</item>
        <item>Seblak adalah masakan khas Sunda yang dikenal berasal dari wilayah Parahyangan dengan cita rasa gurih dan pedas. Terbuat dari kerupuk basah yang dimasak dengan sayuran dan sumber protein seperti telur, ayam, boga bahari, atau olahan daging sapi, dan dimasak dengan kencur.</item>
        <item>Semur jengkol adalah makanan yang sangat popular di kawasan kota Jakarta sehingga telah menyebar ke berbagai wilayah Indonesia. Dalam sistem pembuatan semur jengkol, hal yang perlu diperhatikan adalah ketepatan bumbu untuk menghasilkan rasa semur jengkol yang pas dan menyatu dengan bahan-bahan bumbu</item>
        <item>Tahu petis adalah jajanan khas kota Semarang berupa tahu goreng yang dimakan dengan petis yang dioleskan/disisipkan di tengah-tengah tahu. Keunikan produk ini ada pada bumbu petis berbahan dasar udang yang diracik dengan bumbu spesial sehingga menghasilkan petis udang siap saji yang bearoma harum dan tidak menyengat. Dipadu dengan tahu pong yang segar dan renyah sehingga menambah kelezatannya.</item>
        <item>Wingko atau sering disebut juga Wingko babat adalah makanan tradisional khas Indonesia. Wingko adalah sejenis kue yang terbuat dari kelapa muda, tepung beras ketan dan gula. Wingko sangat terkenal di pantai utara pulau Jawa</item>
    </string-array>
</resources>